--- a/calendar_app/styles.css
+++ b/calendar_app/styles.css
@@ -22,14 +22,14 @@ h1 {
 .calendar {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    gap: 10px;
-    padding: 10px;
+    gap: 6px;
+    padding: 8px;
 }
 
 .day {
     background-color: #ffffff;
     border: 1px solid #ccc;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
     position: relative;
     cursor: pointer;
@@ -42,11 +42,11 @@ h1 {
 .note-badge {
     background-color: #28a745;
     color: white;
-    border-radius: 50%;
+    border-radius: 4px;
     padding: 5px;
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 2px;
+    right: 2px;
     font-size: 12px;
 }
 
@@ -86,10 +86,23 @@ h1 {
 
 input, textarea {
     width: 100%;
+    min-height: 25%;
+    height: fit-content;
     padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
+    margin: 0px 0;
+    border: none;
+    outline: none;
     border-radius: 5px;
+}
+input, textarea:active{
+  border: none;
+  outline: none;
+}
+
+#noteTitle{
+  font-size: 20px;
+  font-weight: bold;
+  border-bottom: 2px solid #f1f1f1;
 }
 
 button {
