--- a/period_table/styles.css
+++ b/period_table/styles.css
@@ -45,10 +45,30 @@ body {
   background-color: lightblue;
 }
 
+.question:before {
+  position: absolute;
+  color: black ;
+  content: var(--question-index);
+  top: -10px;
+  left: 10px;
+  background-color: lightblue;
+  padding: 4px;
+  border-radius: 4px;
+ margin-left: 2px;
+ font-size: 12px;
+}
+
 .question {
+  position:relative ;
   font-size: 24px;
   margin-top: 20px;
   margin-bottom: 20px;
+  background-color: #ADD8E65C;
+  height:100px;
+  border-radius: 6px;
+  padding-top: 10px;
+  /* padding: 6px; */
+  
 }
 
 .options {
@@ -57,7 +77,7 @@ body {
   gap: 10px;
 }
 
-.option {
+.option{
   padding: 10px;
   background-color: #e0f0ff;
   border: 1px solid #0073e6;
@@ -65,13 +85,15 @@ body {
   cursor: pointer;
   transition: background-color 0.2s;
 }
-
+.a{background-color: green; color:#fff; font-weight: bold;}
+.b{background-color: red; color:#fff;font-weight: bold;}
 .option:hover {
   background-color: #cce7ff;
 }
 
 .next-button {
   display: none;
+  width:100%;
   margin-top: 20px;
   padding: 10px;
   background-color: #0073e6;
