--- a/vocab_app/style.css
+++ b/vocab_app/style.css
@@ -96,6 +96,36 @@
   animation: toast-in 0.3s ease forwards;
 }
 
+ .list-button {
+      cursor: pointer;
+      margin-bottom: 10px;
+    }
+    .card-preview {
+      margin-bottom: 20px;
+      padding: 15px;
+      border: 1px solid #ddd;
+      background-color: #f9f9f9;
+    }
+    .similar-word {
+      display: inline-block;
+      margin: 5px;
+      padding: 5px 10px;
+      background-color: #e9ecef;
+      border-radius: 5px;
+    }
+    .modal-body {
+      max-height: auto;
+      overflow-y: auto;
+      position: relative;
+    }
+    .modal-header{
+      position: sticky;
+      top: 0;
+      z-index: 999;
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(10px);
+      border-radius: 15px;
+    }
 @keyframes toast-in {
   from {
     opacity: 0;
